# RAG

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
evals/: README.md  baseline_full_corpus.json  baseline_hybrid.json  baseline_official.json  baseline_reranker.json  baseline_smart_retrieval.json  generate_testset.py  goldset.json  harness.py
src/: README.md  bm25.py  chunking.py  citations.py  config.py  embeddings.py  fusion.py  ingest.py  query.py  query_analysis.py  rerank.py  store.py  verify.py
tests/: README.md  conftest.py  test_bm25.py  test_chunking.py  test_citations.py  test_config.py  test_fusion.py  test_query_analysis.py  test_rerank.py  test_store.py
