[project]
name = "rag-portfolio"
version = "0.1.0"
description = "RAG híbrido con evals y citations sobre reportes financieros 10-K"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "cohere>=7.0.7",
    "httpx>=0.28.1",
    "langchain-community>=0.3,<0.4",
    "langchain-openai>=0.3,<1",
    "lxml>=6.1.1",
    "numpy>=2.5.1",
    "openai>=2.46.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# El proyecto no se instala como paquete; esto pone la raíz en sys.path para
# que los tests importen src.* sin depender del cwd.
pythonpath = ["."]
